primer parte del main

--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    <div class="rain-effect"></div>
-</body>
+    <!-- STYLES -->
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- FONTAWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <section id="main">
+      <nav>
+        <div class="logoContainer">
+          <p>cotsDev</p>
+        </div>
+        <div class="navigation">
+          <ul>
+            <li>
+              <a href=""> <p>SPA</p> </a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa-solid fa-moon"></i>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa-solid fa-bars"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="welcomeMessage">
+        <div class="welcome">
+          <p class="welcomeText">Hey! I'm</p>
+          <p class="name">AUGUSTO ALFARO LOPEZ</p>
+        </div>
+        <div class="welcome">
+          <p class="welcomeText">but you can call me</p>
+          <p class="name">COTS</p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
