agregada animacion del nav

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <section id="main">
       <nav>
         <div class="logoContainer">
-          <p>cotsDev</p>
+          <p class="logo">cotsDev</p>
         </div>
         <div class="navigation">
           <ul>
             <li>
-              <a href=""> <p>SPA</p> </a>
+              <a href=""> <p class="language">SPA</p> </a>
             </li>
             <li>
               <a href="">
@@ -47,5 +47,6 @@
         </div>
       </div>
     </section>
+    <script src="./script.js" defer async></script>
   </body>
 </html>
