presentation y more info agregada

--- a/index.html
+++ b/index.html
@@ -37,14 +37,24 @@
         </div>
       </nav>
       <div class="welcomeMessage">
-        <div class="welcome">
+        <div class="welcome wOne">
           <p class="welcomeText">Hey! I'm</p>
           <p class="name">AUGUSTO ALFARO LOPEZ</p>
         </div>
-        <div class="welcome">
+        <div class="welcome wTwo">
           <p class="welcomeText">but you can call me</p>
           <p class="name">COTS</p>
         </div>
+      </div>
+      <div class="presentation">
+        <p class="presentationText">
+          I’m a graphic designer, UX/UI designe <br />
+          & front-end web develope
+        </p>
+      </div>
+      <div class="moreInfo">
+        <p><i class="fa-solid fa-arrow-right"></i>see my projects</p>
+        <p><i class="fa-solid fa-arrow-right"></i>more about me</p>
       </div>
     </section>
     <script src="./script.js" defer async></script>
