animation main terminada

--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
         </div>
       </div>
       <div class="presentation">
-        <p class="presentationText">
-          I’m a graphic designer, UX/UI designe <br />
-          & front-end web develope
-        </p>
+        <p class="pOne">I’m a graphic designer, UX/UI designe</p>
+        <p class="pTwo">& front-end web develope</p>
       </div>
       <div class="moreInfo">
         <p><i class="fa-solid fa-arrow-right"></i>see my projects</p>
