correccion detalles animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section id="main">
@@ -38,7 +45,7 @@
       </nav>
       <div class="welcomeMessage">
         <div class="welcome wOne">
-          <p class="welcomeText">Hey! I'm</p>
+          <p class="welcomeText">Hey, I'm</p>
           <p class="name">AUGUSTO ALFARO LOPEZ</p>
         </div>
         <div class="welcome wTwo">
@@ -51,8 +58,14 @@
         <p class="pTwo">& front-end web develope</p>
       </div>
       <div class="moreInfo">
-        <p><i class="fa-solid fa-arrow-right"></i>see my projects</p>
-        <p><i class="fa-solid fa-arrow-right"></i>more about me</p>
+        <div class="pContainer">
+          <i class="fa-solid fa-arrow-right"></i>
+          <p>see my projects</p>
+        </div>
+        <div class="pContainer">
+          <i class="fa-solid fa-arrow-right"></i>
+          <p>more about me</p>
+        </div>
       </div>
     </section>
     <script src="./script.js" defer async></script>
