--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
     />
   </head>
   <body>
+    <nav>
+      <div class="logoContainer">
+        <p class="logo">cotsDev</p>
+      </div>
+      <div class="navigation">
+        <ul>
+          <li>
+            <a href=""> <p class="language">SPA</p> </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fa-solid fa-moon"></i>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fa-solid fa-bars"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <section id="main">
-      <nav>
-        <div class="logoContainer">
-          <p class="logo">cotsDev</p>
-        </div>
-        <div class="navigation">
-          <ul>
-            <li>
-              <a href=""> <p class="language">SPA</p> </a>
-            </li>
-            <li>
-              <a href="">
-                <i class="fa-solid fa-moon"></i>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <i class="fa-solid fa-bars"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
       <div class="welcomeMessage">
         <div class="welcome wOne">
           <p class="welcomeText">Hey, I'm</p>
@@ -54,11 +54,11 @@
         </div>
       </div>
       <div class="presentation">
-        <p class="pOne">I’m a graphic designer, UX/UI designe</p>
-        <p class="pTwo">& front-end web develope</p>
+        <p class="pOne">I’m a graphic designer, UX/UI designer</p>
+        <p class="pTwo">& front-end web developer</p>
       </div>
       <div class="moreInfo">
-        <div class="pContainer">
+        <div class="pContainer myProjects">
           <i class="fa-solid fa-arrow-right"></i>
           <p>see my projects</p>
         </div>
