agregado de logica my projects

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav>
       <div class="logoContainer">
-        <p class="logo">cotsDev</p>
+        <p class="logo"><a href=""> cotsDev </a></p>
       </div>
       <div class="navigation">
         <ul>
@@ -66,6 +66,15 @@
           <i class="fa-solid fa-arrow-right"></i>
           <p>more about me</p>
         </div>
+      </div>
+    </section>
+    <section id="myProjects">
+      <div class="previewContainer"></div>
+      <div class="listContainer">
+        <div class="titleContainer">
+          <h3>work</h3>
+        </div>
+        <div class="listContent"></div>
       </div>
     </section>
     <script src="./script.js" defer async></script>
