--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="previewContainer"></div>
       <div class="listContainer">
         <div class="titleContainer">
-          <h3>work</h3>
+          <h3 class="workTitle">work</h3>
         </div>
         <div class="listContent"></div>
       </div>
