list of works css and animation

--- a/index.html
+++ b/index.html
@@ -74,7 +74,26 @@
         <div class="titleContainer">
           <h3 class="workTitle">work</h3>
         </div>
-        <div class="listContent"></div>
+        <div class="listContent">
+          <a href="">
+            <div class="content">
+              <i class="fa-solid fa-arrow-right"></i>
+              <span class="linkText"> Ganadera Arenales </span>
+            </div>
+          </a>
+          <a href="">
+            <div class="content">
+              <i class="fa-solid fa-arrow-right"></i>
+              <span class="linkText"> Das Service </span>
+            </div>
+          </a>
+          <a href="">
+            <div class="content">
+              <i class="fa-solid fa-arrow-right"></i>
+              <span class=""> Dres. Orlandi </span>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
     <script src="./script.js" defer async></script>
