animation home button from my projects

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="navigation">
         <ul>
           <li>
-            <a href=""> <p class="language">SPA</p> </a>
+            <a href="#"> <p class="language">SPA</p> </a>
           </li>
           <li>
             <a href="">
