hover content first part

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="navigation">
         <ul>
           <li>
-            <a href="#"> <p class="language">SPA</p> </a>
+            <a href=""> <p class="language">SPA</p> </a>
           </li>
           <li>
             <a href="">
@@ -75,13 +75,13 @@
           <h3 class="workTitle">work</h3>
         </div>
         <div class="listContent">
-          <a href="">
+          <a href="" class="ganadera">
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class="linkText"> Ganadera Arenales </span>
             </div>
           </a>
-          <a href="">
+          <a href="" class="das">
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class="linkText"> Das Service </span>
