primer parte de more about me

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <i class="fa-solid fa-arrow-right"></i>
           <p>see my projects</p>
         </div>
-        <div class="pContainer">
+        <div class="pContainer moreAboutMe">
           <i class="fa-solid fa-arrow-right"></i>
           <p>more about me</p>
         </div>
@@ -94,6 +94,14 @@
             </div>
           </a>
         </div>
+      </div>
+    </section>
+    <section id="moreAboutMe">
+      <div class="mamAbout">
+        <h1>hola</h1>
+      </div>
+      <div class="mamCarrousel">
+        <h1>hola</h1>
       </div>
     </section>
     <script src="./script.js" defer async></script>
