more about me animation finished

--- a/index.html
+++ b/index.html
@@ -98,10 +98,18 @@
     </section>
     <section id="moreAboutMe">
       <div class="mamAbout">
-        <h1>hola</h1>
+        <div class="aboutContainer">
+          <h3>about</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+            tempora illo voluptate rem consectetur rerum nesciunt hic, ducimus,
+            illum voluptas impedit autem placeat quis ab, doloribus dolorem iure
+            adipisci dolorum.
+          </p>
+        </div>
       </div>
       <div class="mamCarrousel">
-        <h1>hola</h1>
+        <img src="./assets/jack.jpg" alt="">
       </div>
     </section>
     <script src="./script.js" defer async></script>
