--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <span class="linkText"> Das Service </span>
             </div>
           </a>
-          <a href="">
+          <a href="" class="dres">
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class=""> Dres. Orlandi </span>
