--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
           <h3 class="workTitle">work</h3>
         </div>
         <div class="listContent">
-          <a href="" class="ganadera">
+          <a href="https://cotsdev93.github.io/ganadera-arenales/" target="_blank" class="ganadera">
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class="linkText"> Ganadera Arenales </span>
             </div>
           </a>
-          <a href="" class="das">
+          <a href="https://cotsdev93.github.io/das-service/" target="_blank" class="das">
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class="linkText"> Das Service </span>
             </div>
           </a>
-          <a href="" class="dres">
+          <a href="https://cotsdev93.github.io/dres-orlandi/" target="_blank" class="dres">
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class=""> Dres. Orlandi </span>
