--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
           <li>
             <a href=""> <p class="language">SPA</p> </a>
           </li>
-          <li>
+          <li class="theme">
             <a href="">
               <i class="fa-solid fa-moon"></i>
+              <i class="fa-regular fa-sun"></i>
             </a>
           </li>
           <li>
@@ -87,7 +88,7 @@
               <span class="linkText"> Das Service </span>
             </div>
           </a>
-          <a href="https://cotsdev93.github.io/dres-orlandi/" target="_blank" class="dres">
+          <a href="https://cotsdev93.github.io/dres-orlandi/" class="dres">
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class=""> Dres. Orlandi </span>
