--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav>
       <div class="logoContainer">
-        <p class="logo"><a href=""> cotsDev </a></p>
+        <p class="logo"><a href="" class="logoM"> cotsDev </a></p>
       </div>
       <div class="navigation">
         <ul>
@@ -76,13 +76,21 @@
           <h3 class="workTitle">work</h3>
         </div>
         <div class="listContent">
-          <a href="https://cotsdev93.github.io/ganadera-arenales/" target="_blank" class="ganadera">
+          <a
+            href="https://cotsdev93.github.io/ganadera-arenales/"
+            target="_blank"
+            class="ganadera"
+          >
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class="linkText"> Ganadera Arenales </span>
             </div>
           </a>
-          <a href="https://cotsdev93.github.io/das-service/" target="_blank" class="das">
+          <a
+            href="https://cotsdev93.github.io/das-service/"
+            target="_blank"
+            class="das"
+          >
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class="linkText"> Das Service </span>
@@ -110,7 +118,7 @@
         </div>
       </div>
       <div class="mamCarrousel">
-        <img src="./assets/jack.jpg" alt="">
+        <img src="./assets/jack.jpg" alt="" />
       </div>
     </section>
     <script src="./script.js" defer async></script>
