continuacion de theme

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav>
       <div class="logoContainer">
-        <p class="logo"><a href="" class="logoM"> cotsDev </a></p>
+        <p class="logo">cotsDev</p>
       </div>
       <div class="navigation">
         <ul>
