segunda parte main theme

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
       </div>
       <div class="presentation">
-        <p class="pOne">I’m a graphic designer, UX/UI designer</p>
-        <p class="pTwo">& front-end web developer</p>
+        <p class="pOne pText">I’m a graphic designer, UX/UI designer</p>
+        <p class="pTwo pText">& front-end web developer</p>
       </div>
       <div class="moreInfo">
         <div class="pContainer myProjects">
