main theme terminado

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
       <div class="moreInfo">
         <div class="pContainer myProjects">
           <i class="fa-solid fa-arrow-right"></i>
-          <p>see my projects</p>
+          <p class="mamText">see my projects</p>
         </div>
         <div class="pContainer moreAboutMe">
           <i class="fa-solid fa-arrow-right"></i>
-          <p>more about me</p>
+          <p class="mamText">more about me</p>
         </div>
       </div>
     </section>
