my projects theme second part

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         </div>
         <div class="listContent">
           <a
+            class="mpLinks"
             href="https://cotsdev93.github.io/ganadera-arenales/"
             target="_blank"
             class="ganadera"
@@ -87,6 +88,7 @@
             </div>
           </a>
           <a
+            class="mpLinks"
             href="https://cotsdev93.github.io/das-service/"
             target="_blank"
             class="das"
@@ -96,7 +98,11 @@
               <span class="linkText"> Das Service </span>
             </div>
           </a>
-          <a href="https://cotsdev93.github.io/dres-orlandi/" class="dres">
+          <a
+            class="mpLinks"
+            href="https://cotsdev93.github.io/dres-orlandi/"
+            class="dres"
+          >
             <div class="content">
               <i class="fa-solid fa-arrow-right"></i>
               <span class=""> Dres. Orlandi </span>
