correccion work title my projects theme

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="previewContainer"></div>
       <div class="listContainer">
         <div class="titleContainer">
-          <h3 class="workTitle">work</h3>
+          <p class="workTitle">work</p>
         </div>
         <div class="listContent">
           <a
