correccion animation my projects

--- a/index.html
+++ b/index.html
@@ -77,33 +77,33 @@
         </div>
         <div class="listContent">
           <a
-            class="mpLinks"
+            class="mpLinks mpLinksGanadera"
             href="https://cotsdev93.github.io/ganadera-arenales/"
             target="_blank"
             class="ganadera"
           >
-            <div class="content">
+            <div class="content contentGanadera">
               <i class="fa-solid fa-arrow-right"></i>
-              <span class="linkText"> Ganadera Arenales </span>
+              <span class="linkText linkGanadera"> Ganadera Arenales </span>
             </div>
           </a>
           <a
-            class="mpLinks"
+            class="mpLinks mpLinksDas"
             href="https://cotsdev93.github.io/das-service/"
             target="_blank"
             class="das"
           >
-            <div class="content">
+            <div class="content contentDas">
               <i class="fa-solid fa-arrow-right"></i>
               <span class="linkText"> Das Service </span>
             </div>
           </a>
           <a
-            class="mpLinks"
+            class="mpLinks mpLinksDres"
             href="https://cotsdev93.github.io/dres-orlandi/"
             class="dres"
           >
-            <div class="content">
+            <div class="content contentDres">
               <i class="fa-solid fa-arrow-right"></i>
               <span class=""> Dres. Orlandi </span>
             </div>
