--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     <section id="moreAboutMe">
       <div class="mamAbout">
         <div class="aboutContainer">
-          <h3>about</h3>
-          <p>
+          <p class="titleAbout">about</p>
+          <p class="textAbout">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
             tempora illo voluptate rem consectetur rerum nesciunt hic, ducimus,
             illum voluptas impedit autem placeat quis ab, doloribus dolorem iure
