more about me theme

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             class="das"
           >
             <div class="content contentDas">
-              <i class="fa-solid fa-arrow-right"></i>
+              <i class="fa-solid fa-arrow-right fa-arrow"></i>
               <span class="linkText"> Das Service </span>
             </div>
           </a>
