menu primer parte

--- a/index.html
+++ b/index.html
@@ -127,6 +127,21 @@
         <img src="./assets/jack.jpg" alt="" />
       </div>
     </section>
+    <section id="menu">
+      <div class="menuContainer">
+        <ul>
+          <li>Home</li>
+          <li>Work</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+        <div class="networks">
+          <p>github</p>
+          <p>instagram</p>
+        </div>
+        
+      </div>
+    </section>
     <script src="./script.js" defer async></script>
   </body>
 </html>
