--- a/index.html
+++ b/index.html
@@ -130,16 +130,22 @@
     <section id="menu">
       <div class="menuContainer">
         <ul>
-          <li>Home</li>
-          <li>Work</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><p class="home">Home</p></li>
+          <li><p class="work">Work</p></li>
+          <li><p class="about">About</p></li>
+          <li><p class="contact">Contact</p></li>
         </ul>
         <div class="networks">
-          <p>github</p>
-          <p>instagram</p>
+          <a href="">
+            <i class="fa-brands fa-github"></i>
+            <p>github</p>
+          </a>
+
+          <a href="">
+            <i class="fa-brands fa-instagram"></i>
+            <p>instagram</p>
+          </a>
         </div>
-        
       </div>
     </section>
     <script src="./script.js" defer async></script>
