menu animation terminado

--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
           <li><p class="contact">Contact</p></li>
         </ul>
         <div class="networks">
-          <a href="">
+          <a href="" class="network">
             <i class="fa-brands fa-github"></i>
             <p>github</p>
           </a>
 
-          <a href="">
+          <a href="" class="network">
             <i class="fa-brands fa-instagram"></i>
             <p>instagram</p>
           </a>
