--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
     <section id="menu">
       <div class="menuContainer">
         <ul>
-          <li><p class="home">Home</p></li>
-          <li><p class="work">Work</p></li>
-          <li><p class="about">About</p></li>
-          <li><p class="contact">Contact</p></li>
+          <li><p class="home optionMenu">Home</p></li>
+          <li><p class="work optionMenu">Work</p></li>
+          <li><p class="about optionMenu">About</p></li>
+          <li><p class="contact optionMenu">Contact</p></li>
         </ul>
         <div class="networks">
           <a href="" class="network">
-            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-github optionMenu"></i>
             <p>github</p>
           </a>
 
           <a href="" class="network">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram optionMenu"></i>
             <p>instagram</p>
           </a>
         </div>
