agregado theme a menu

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
         <div class="networks">
           <a href="" class="network">
             <i class="fa-brands fa-github optionMenu"></i>
-            <p>github</p>
+            <p class="optionMenu">github</p>
           </a>
 
           <a href="" class="network">
             <i class="fa-brands fa-instagram optionMenu"></i>
-            <p>instagram</p>
+            <p class="optionMenu">instagram</p>
           </a>
         </div>
       </div>
