primer parte carrousel mam

--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
         </div>
       </div>
       <div class="mamCarrousel">
-        <img src="./assets/jack.jpg" alt="" />
+        <i class="fa-solid fa-circle-chevron-left"></i>
+        <div class="carrouselContent"></div>
+        <i class="fa-solid fa-circle-chevron-right"></i>
       </div>
     </section>
     <section id="menu">
