armado carrousel en mam

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
         </div>
       </div>
       <div class="mamCarrousel">
-        <i class="fa-solid fa-circle-chevron-left"></i>
+        <i class="fa-solid fa-circle-chevron-left leftmam"></i>
         <div class="carrouselContent"></div>
-        <i class="fa-solid fa-circle-chevron-right"></i>
+        <i class="fa-solid fa-circle-chevron-right rightmam"></i>
       </div>
     </section>
     <section id="menu">
