--- a/index.html
+++ b/index.html
@@ -112,15 +112,10 @@
       </div>
     </section>
     <section id="moreAboutMe">
-      <div class="mamAbout">
-        <div class="aboutContainer">
-          <p class="titleAbout">about</p>
-          <p class="textAbout">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-            tempora illo voluptate rem consectetur rerum nesciunt hic, ducimus,
-            illum voluptas impedit autem placeat quis ab, doloribus dolorem iure
-            adipisci dolorum.
-          </p>
+      <div class="mamAboutContainer">
+
+        <div class="mamAbout">
+          
         </div>
       </div>
       <div class="mamCarrousel">
