--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- boxicons -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
   </head>
   <body>
     <nav>
@@ -83,7 +86,7 @@
             class="ganadera"
           >
             <div class="content contentGanadera">
-              <i class="fa-solid fa-arrow-right"></i>
+              <i class='bx bx-right-arrow-alt'></i>
               <span class="linkText linkGanadera"> Ganadera Arenales </span>
             </div>
           </a>
@@ -94,7 +97,7 @@
             class="das"
           >
             <div class="content contentDas">
-              <i class="fa-solid fa-arrow-right fa-arrow"></i>
+              <i class='bx bx-right-arrow-alt'></i>
               <span class="linkText"> Das Service </span>
             </div>
           </a>
@@ -104,7 +107,7 @@
             class="dres"
           >
             <div class="content contentDres">
-              <i class="fa-solid fa-arrow-right"></i>
+              <i class='bx bx-right-arrow-alt'></i> 
               <span class=""> Dres. Orlandi </span>
             </div>
           </a>
