--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       rel="stylesheet"
     />
     <!-- boxicons -->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
@@ -83,10 +85,9 @@
             class="mpLinks mpLinksGanadera"
             href="https://cotsdev93.github.io/ganadera-arenales/"
             target="_blank"
-            class="ganadera"
           >
             <div class="content contentGanadera">
-              <i class='bx bx-right-arrow-alt'></i>
+              <i class="bx bx-right-arrow-alt"></i>
               <span class="linkText linkGanadera"> Ganadera Arenales </span>
             </div>
           </a>
@@ -94,21 +95,25 @@
             class="mpLinks mpLinksDas"
             href="https://cotsdev93.github.io/das-service/"
             target="_blank"
-            class="das"
           >
             <div class="content contentDas">
-              <i class='bx bx-right-arrow-alt'></i>
+              <i class="bx bx-right-arrow-alt"></i>
               <span class="linkText"> Das Service </span>
             </div>
           </a>
           <a
             class="mpLinks mpLinksDres"
             href="https://cotsdev93.github.io/dres-orlandi/"
-            class="dres"
           >
             <div class="content contentDres">
-              <i class='bx bx-right-arrow-alt'></i> 
+              <i class="bx bx-right-arrow-alt"></i>
               <span class=""> Dres. Orlandi </span>
+            </div>
+          </a>
+          <a class="mpLinks mpLinksIndumepla" href="http://indumepla.com">
+            <div class="content contentIndumepla">
+              <i class="bx bx-right-arrow-alt"></i>
+              <span class=""> Indumepla </span>
             </div>
           </a>
         </div>
@@ -116,10 +121,7 @@
     </section>
     <section id="moreAboutMe">
       <div class="mamAboutContainer">
-
-        <div class="mamAbout">
-          
-        </div>
+        <div class="mamAbout"></div>
       </div>
       <div class="mamCarrousel">
         <i class="fa-solid fa-circle-chevron-left leftmam"></i>
